working on react class method

--- a/notebooks/MCTS Classes.ipynb
+++ b/notebooks/MCTS Classes.ipynb
@@ -55,65 +55,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-2-4e45bcdc9d98>, line 50)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-4e45bcdc9d98>\"\u001b[1;36m, line \u001b[1;32m50\u001b[0m\n\u001b[1;33m    self.is_expanded = True\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import collections\n",
+    "\n",
+    "import rdkit\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem.EState import Fingerprinter\n",
+    "from rdkit.Chem import Descriptors\n",
+    "from rdkit.Chem import rdFMCS\n",
+    "from rdkit.Chem.rdmolops import RDKFingerprint\n",
+    "from rdkit.Chem.Fingerprints import FingerprintMols\n",
+    "from rdkit import DataStructs\n",
+    "from rdkit.Avalon.pyAvalonTools import GetAvalonFP\n",
+    "\n",
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "class UCTNode(): # node object\n",
-    "    def __init__(self, state, move, parent=None):\n",
-    "        self.state = state # in our case a structure\n",
-    "        self.move = move\n",
-    "        self.is_expanded = False # starts with no children\n",
-    "        self.parent = parent  # Optional[UCTNode]\n",
-    "        self.children = {} # Dict[move, UCTNode] #pre intia\n",
-    "        self.child_priors = np.zeros([362], dtype=np.float32)\n",
-    "        self.child_total_value = np.zeros([362], dtype=np.float32)\n",
-    "        self.child_number_visits = np.zeros([362], dtype=np.float32)\n",
-    "\n",
-    "    @property # number_visits getter\n",
+    "class UCTNode(): #the node object, it corresponds to a molecular state.\n",
+    "    def __init__(self, mol_state, move, parent=None): #a given node needs a molecular state\n",
+    "        self.mol_state = mol_state #associated State() object which is a molecular structure\n",
+    "        self.move = move # if a node was made with a move, that move index is linked here\n",
+    "        self.is_expanded = False # nodes start unexpanded\n",
+    "        self.parent = parent  # Optional[UCTNode] (if it's not the root it should have a parent)\n",
+    "        self.children = {}  # Dict[move, UCTNode] starts with no children\n",
+    "        self.child_priors = np.zeros([362], dtype=np.float32) # an array of probabilities, indicating the current preference for each followup move\n",
+    "        self.child_number_visits = np.zeros([362], dtype=np.float32) # an array of the number of visits of each child\n",
+    "        self.children_total_values = np.zeros([362], dtype=np.float32) # an array of the total values of each of the children\n",
+    "        \n",
+    "    \"\"\"Now that each node no longer knows about its own statistics, \n",
+    "    we create aliases for a node’s statistics by using property getters and setters. \n",
+    "    These allow us to transparently proxy these properties to the relevant entry in the parents’ child arrays.\"\"\"\n",
+    "        \n",
+    "    @property\n",
     "    def number_visits(self):\n",
     "        return self.parent.child_number_visits[self.move]\n",
     "\n",
-    "    @number_visits.setter # setter\n",
+    "    @number_visits.setter\n",
     "    def number_visits(self, value):\n",
     "        self.parent.child_number_visits[self.move] = value\n",
     "\n",
-    "    @property # total_value getter\n",
+    "    @property\n",
     "    def total_value(self):\n",
-    "        return self.parent.child_total_value[self.move]\n",
+    "        return self.parent.children_total_values[self.move]\n",
     "\n",
-    "    @total_value.setter # setter\n",
+    "    @total_value.setter # self.move indexes the child to itself in the parent's children_total_values array. \n",
     "    def total_value(self, value):\n",
-    "        self.parent.child_total_value[self.move] = value\n",
+    "        self.parent.children_total_values[self.move] = value\n",
     "\n",
-    "    def child_Q(self):\n",
-    "        return self.child_total_value / (1 + self.child_number_visits) # essentially number successes/number of visits\n",
+    "    def child_Q(self): # calculate Quality for the child arrays\n",
+    "        return self.children_total_values / (1 + self.child_number_visits)\n",
     "\n",
-    "    def child_U(self):\n",
-    "        return math.sqrt(self.number_visits) * (\n",
-    "            self.child_priors / (1 + self.child_number_visits)) # decreases as the number of visits increases? what is priors\n",
+    "    def child_U(self): # calculate Upper confidence bound for the child arrays\n",
+    "        return math.sqrt(self.number_visits) * (self.child_priors / (1 + self.child_number_visits))\n",
     "\n",
-    "    def best_child(self):\n",
-    "        return np.argmax(self.child_Q() + self.child_U()) # of the children find the child with the highest aggregate of quality and uncertainty\n",
+    "    def best_child(self): #quickly finds the index of the child that has the highest aggregate of Q and U scores\n",
+    "        return np.argmax(self.child_Q() + self.child_U()) \n",
     "\n",
-    "    def select_leaf(self): # need to immediately rollout if not is_expanded\n",
+    "    def select_leaf(self):\n",
     "        current = self\n",
-    "    while current.is_expanded:\n",
-    "        best_move = current.best_child()\n",
-    "        current = current.maybe_add_child(best_move)\n",
+    "        while current.is_expanded: # if not expanded immediately return self\n",
+    "            best_move = current.best_child() #get the index of the best child\n",
+    "            current = current.maybe_add_child(best_move) #adds a child at the index if it isn't there\n",
     "        return current\n",
     "\n",
     "    def expand(self, child_priors):\n",
@@ -123,81 +128,93 @@
     "    def maybe_add_child(self, move):\n",
     "        if move not in self.children:\n",
     "            self.children[move] = UCTNode(\n",
-    "              self.state.play(move), move, parent=self)\n",
+    "                self.mol_state.react(move), move, parent=self) # make a child with a reaction\n",
     "        return self.children[move]\n",
     "\n",
-    "    def backpropagate(self, value_estimate: float): #after rollout, calculate value of node\n",
+    "    def backup(self, value_estimate: float): #NEED to check \n",
     "        current = self\n",
-    "    while current.parent is not None:\n",
-    "        current.number_visits += 1\n",
-    "        current.total_value += (value_estimate *\n",
-    "            self.state.to_play)\n",
-    "        current = current.parent\n",
+    "        while current.parent is not None:\n",
+    "            current.number_visits += 1\n",
+    "            current.total_value += value_estimate# used to be (value_estimate * self.mol_state.to_play)\n",
+    "            current = current.parent #MIGHT not be right\n",
     "\n",
-    "class DummyNode(object): #first node I think (root node?) or otherwise parentless node\n",
-    "    def __init__(self):\n",
+    "class DummyNode(object): # makes a node without any child values or parent\n",
+    "    def __init__(self): \n",
     "        self.parent = None\n",
-    "        self.child_total_value = collections.defaultdict(float)\n",
+    "        self.children_total_values = collections.defaultdict(float) \n",
     "        self.child_number_visits = collections.defaultdict(float)\n",
     "\n",
-    "\n",
-    "def UCT_search(state, num_reads): # refer to Segler et al. 2018 Figure \n",
-    "    root = UCTNode(state, move=None, parent=DummyNode()) \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    for _ in range(num_reads): # iterator isn't neccessary in this iteration, just need to iterate the right number of times\n",
-    "        leaf = root.select_leaf() # ***STEP 1***\n",
-    "\n",
-    "        if leaf == root: #if visiting for the first time skip step 2\n",
-    "            #count +=1\n",
-    "            value_estimate = RolloutPhase.evaluate(leaf)\n",
-    "            leaf.backpropagate(value_estimate)\n",
-    "            return np.argmax(root.child_number_visits)\n",
-    "\n",
-    "        child_priors = ExpansionPhase.evaluate(leaf.state) # NEED to figure out what child_priors\n",
-    "        leaf.expand(child_priors) # expand by the predicted child_priors\n",
-    "        value_estimate = RolloutPhase.evaluate(leaf.child_priors) # ***STEP 3*** estimate the value of the best of child_priors ?\n",
-    "        leaf.backpropagate(value_estimate) # ***STEP 4***\n",
+    "def UCT_search(mol_state, num_reads):\n",
+    "    root = UCTNode(mol_state, move=None, parent=DummyNode()) # initializes the search starting with the given mol_state\n",
+    "# the parent is a dummy node because there shouldn't be a parent for the root molecule\n",
+    "    for _ in range(num_reads):\n",
+    "        leaf = root.select_leaf()\n",
+    "        child_priors, value_estimate = Metrics.evaluate(leaf.mol_state)\n",
+    "        leaf.expand(child_priors)\n",
+    "        leaf.backup(value_estimate)\n",
     "    return np.argmax(root.child_number_visits)\n",
     "\n",
-    "\n",
-    "class ExpansionPhase():\n",
+    "class Metrics(): #returns an array of probabilities for followup moves and a value estimation of the current node\n",
     "    @classmethod\n",
-    "    def evaluate(self, state): # state of leaf (child) node\n",
-    "        return np.random.random([362])#, np.random.random()\n",
+    "    def evaluate(self, mol_state):\n",
+    "        return np.random.random([362]), np.random.random()\n",
     "\n",
-    "class RolloutPhase():\n",
-    "    @classmethod\n",
-    "    def evaluate(self, child_priors):\n",
-    "        return np.random.random()\n",
+    "class State(): # NEED to make sure move indexes map to reactions\n",
+    "    def __init__(self, smiles=None): #mol should be a molecule\n",
+    "        self.smiles = smiles\n",
+    "        self.mol = Chem.rdmolfiles.MolFromSmiles(smiles)\n",
+    "        #self.mol = mol\n",
+    "        #self.name = str(mol) #SMILES or lookup method\n",
     "\n",
-    "class State():\n",
-    "    def __init__(self, to_play=1):\n",
-    "        self.to_play = to_play\n",
-    "\n",
-    "    def play(self, move):\n",
-    "        return State(-self.to_play)"
+    "    def react(self, move):\n",
+    "        return State(s[move])#np.random.random()) # eventually build and return a new structure or point to a new smiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def randomSmiles(m1):\n",
+    "    m1.SetProp(\"_canonicalRankingNumbers\", \"True\")\n",
+    "    idxs = list(range(0,m1.GetNumAtoms()))\n",
+    "    random.shuffle(idxs)\n",
+    "    for i,v in enumerate(idxs):\n",
+    "        m1.GetAtomWithIdx(i).SetProp(\"_canonicalRankingNumber\", str(v))\n",
+    "    return Chem.MolToSmiles(m1)\n",
+    "\n",
+    "m1 = Chem.MolFromSmiles(\"CNOPc1ccccc1\")\n",
+    "s = []\n",
+    "for i in range(1000):\n",
+    "  smiles = randomSmiles(m1)\n",
+    "  s.append(smiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 0.0019655227661132812 sec to run 10000 times\n"
+      "329\n",
+      "Took 1.6892707347869873 sec to run 10000 times\n"
      ]
     }
    ],
    "source": [
+    "#mol = Chem.rdmolfiles.MolFromSmiles('CC1CCC2CC(C(=CC=CC=CC(CC(C(=O)C(C(C(=CC(C(=O)CC(OC(=O)C3CCCCN3C(=O)C(=O)C1(O2)O)C(C)CC4CCC(C(C4)OC)O)C)C)O)OC)C)C)C)OC')\n",
+    "smiles = 'CC1CCC2CC(C(=CC=CC=CC(CC(C(=O)C(C(C(=CC(C(=O)CC(OC(=O)C3CCCCN3C(=O)C(=O)C1(O2)O)C(C)CC4CCC(C(C4)OC)O)C)C)O)OC)C)C)C)OC'\n",
+    "state = State(smiles)\n",
     "num_reads = 10000\n",
     "import time\n",
     "tick = time.time()\n",
-    "UCT_search(State(), num_reads)\n",
+    "print(UCT_search(state, num_reads))\n",
     "tock = time.time()\n",
     "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
     "#import resource\n",
