first commit to branch

--- a/notebooks/MCTS Classes.ipynb
+++ b/notebooks/MCTS Classes.ipynb
@@ -55,11 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
+    "import random\n",
     "\n",
     "import rdkit\n",
     "from rdkit import Chem\n",
@@ -77,7 +78,7 @@
     "class UCTNode(): #the node object, it corresponds to a molecular state.\n",
     "    def __init__(self, mol_state, move, parent=None): #a given node needs a molecular state\n",
     "        self.mol_state = mol_state #associated State() object which is a molecular structure\n",
-    "        self.move = move # if a node was made with a move, that move index is linked here\n",
+    "        self.move = move # if a node was made with a move, that move index is linked here. Move is a master index of sorts\n",
     "        self.is_expanded = False # nodes start unexpanded\n",
     "        self.parent = parent  # Optional[UCTNode] (if it's not the root it should have a parent)\n",
     "        self.children = {}  # Dict[move, UCTNode] starts with no children\n",
@@ -128,7 +129,7 @@
     "    def maybe_add_child(self, move):\n",
     "        if move not in self.children:\n",
     "            self.children[move] = UCTNode(\n",
-    "                self.mol_state.react(move), move, parent=self) # make a child with a reaction\n",
+    "                self.mol_state.react(move), move, parent=self) # make a child with a reaction, need to update react method to include structure and enzyme list or even combine the two\n",
     "        return self.children[move]\n",
     "\n",
     "    def backup(self, value_estimate: float): #NEED to check \n",
@@ -138,45 +139,70 @@
     "            current.total_value += value_estimate# used to be (value_estimate * self.mol_state.to_play)\n",
     "            current = current.parent #MIGHT not be right\n",
     "\n",
+    "def UCT_search(mol_state, num_reads):\n",
+    "    root = UCTNode(mol_state, move=None, parent=DummyNode()) # initializes the search starting with the given mol_state\n",
+    "# the parent is a dummy node because there shouldn't be a parent for the root molecule\n",
+    "    \n",
+    "    pathway_choice = []\n",
+    "    \n",
+    "    terminal_states = []\n",
+    "    \n",
+    "    for _ in range(num_reads):\n",
+    "        leaf = root.select_leaf()\n",
+    "        child_priors, value_estimate = Metrics.evaluate(leaf.mol_state.mol)\n",
+    "        leaf.expand(child_priors)\n",
+    "        leaf.backup(value_estimate)\n",
+    "        \n",
+    "    print('tree search complete')    \n",
+    "        \n",
+    "    for i in range(10):\n",
+    "        terminal_states.append(random.choice(s)) # currently semi-random SMILES\n",
+    "    \n",
+    "    print('terminal states enumerated')\n",
+    "    \n",
+    "    while root.mol_state.smiles not in terminal_states: # if the root is a terminal SMILES stop immediately\n",
+    "        # this method has no failsafe as it assumes there always is a path\n",
+    "        \n",
+    "        idx = np.argmax(root.child_number_visits) # find the index of the most visted child node\n",
+    "        print(idx)\n",
+    "        pathway_choice.append(root.children[idx]) # add that node to the pathway\n",
+    "        root = root.children[idx] # make the child node the root\n",
+    "        \n",
+    "    return pathway_choice\n",
+    "    \n",
+    "    #return np.argmax(root.child_number_visits) # returns the index of the root's child, which is the first retrosynthetic node\n",
+    "# doing this recursively should result in the full pathway if solved?\n",
+    "        \n",
+    "\n",
     "class DummyNode(object): # makes a node without any child values or parent\n",
     "    def __init__(self): \n",
     "        self.parent = None\n",
     "        self.children_total_values = collections.defaultdict(float) \n",
     "        self.child_number_visits = collections.defaultdict(float)\n",
     "\n",
-    "def UCT_search(mol_state, num_reads):\n",
-    "    root = UCTNode(mol_state, move=None, parent=DummyNode()) # initializes the search starting with the given mol_state\n",
-    "# the parent is a dummy node because there shouldn't be a parent for the root molecule\n",
-    "    for _ in range(num_reads):\n",
-    "        leaf = root.select_leaf()\n",
-    "        child_priors, value_estimate = Metrics.evaluate(leaf.mol_state)\n",
-    "        leaf.expand(child_priors)\n",
-    "        leaf.backup(value_estimate)\n",
-    "    return np.argmax(root.child_number_visits)\n",
-    "\n",
     "class Metrics(): #returns an array of probabilities for followup moves and a value estimation of the current node\n",
     "    @classmethod\n",
-    "    def evaluate(self, mol_state):\n",
+    "    def evaluate(self, mol):\n",
     "        return np.random.random([362]), np.random.random()\n",
     "\n",
-    "class State(): # NEED to make sure move indexes map to reactions\n",
-    "    def __init__(self, smiles=None): #mol should be a molecule\n",
+    "class State(): # corresponds to a molecular structure. contains a smiles string and rdkit mol\n",
+    "    # NEED to make sure move indexes map to reactions # ADD enzyme? or add to node IDK\n",
+    "    def __init__(self, smiles=None, enzyme=None): #smiles should be a smiles string, enzyme should be an EC#\n",
     "        self.smiles = smiles\n",
     "        self.mol = Chem.rdmolfiles.MolFromSmiles(smiles)\n",
-    "        #self.mol = mol\n",
-    "        #self.name = str(mol) #SMILES or lookup method\n",
+    "        self.enzyme = enzyme\n",
     "\n",
-    "    def react(self, move):\n",
-    "        return State(s[move])#np.random.random()) # eventually build and return a new structure or point to a new smiles"
+    "    def react(self, move, structure_list=s, enzyme_list=e): #change s\n",
+    "        return State(structure_list[move], enzyme_list[move])#np.random.random()) # eventually build and return a new structure or point to a new smiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
+    "import string\n",
     "\n",
     "def randomSmiles(m1):\n",
     "    m1.SetProp(\"_canonicalRankingNumbers\", \"True\")\n",
@@ -187,38 +213,70 @@
     "    return Chem.MolToSmiles(m1)\n",
     "\n",
     "m1 = Chem.MolFromSmiles(\"CNOPc1ccccc1\")\n",
+    "m2 = Chem.MolFromSmiles(\"O=C(O)C(=O)CCC(=O)O\")\n",
     "s = []\n",
     "for i in range(1000):\n",
-    "  smiles = randomSmiles(m1)\n",
-    "  s.append(smiles)"
+    "    smiles = randomSmiles(m1)\n",
+    "    s.append(smiles)\n",
+    "e= []\n",
+    "for i in range(1000):\n",
+    "    smiles = randomSmiles(m1)\n",
+    "    e.append(''.join(random.choices(string.ascii_uppercase + string.digits, k=8)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing: if the search results in an index error of 0 it probably means it reached a depth that hadn't properly been expanded? All arrays are intialized with zeroes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "329\n",
-      "Took 1.6892707347869873 sec to run 10000 times\n"
+      "tree search complete\n",
+      "terminal states enumerated\n",
+      "57\n",
+      "Took 3.5820913314819336 sec to run 10000 times\n",
+      "parsing nodelist\n",
+      "c1ccc(PONC)cc1\n",
+      "nodelist enzymes\n",
+      "oops, to view the enzymes for this pathway you need a premium metamoles subscription\n",
+      "just kidding\n",
+      "parsing enzymes\n",
+      "4RWKUP9W\n"
      ]
     }
    ],
    "source": [
-    "#mol = Chem.rdmolfiles.MolFromSmiles('CC1CCC2CC(C(=CC=CC=CC(CC(C(=O)C(C(C(=CC(C(=O)CC(OC(=O)C3CCCCN3C(=O)C(=O)C1(O2)O)C(C)CC4CCC(C(C4)OC)O)C)C)O)OC)C)C)C)OC')\n",
     "smiles = 'CC1CCC2CC(C(=CC=CC=CC(CC(C(=O)C(C(C(=CC(C(=O)CC(OC(=O)C3CCCCN3C(=O)C(=O)C1(O2)O)C(C)CC4CCC(C(C4)OC)O)C)C)O)OC)C)C)C)OC'\n",
     "state = State(smiles)\n",
     "num_reads = 10000\n",
     "import time\n",
     "tick = time.time()\n",
-    "print(UCT_search(state, num_reads))\n",
+    "node_list = UCT_search(state, num_reads)\n",
     "tock = time.time()\n",
     "print(\"Took %s sec to run %s times\" % (tock - tick, num_reads))\n",
-    "#import resource\n",
-    "#print(\"Consumed %sB memory\" % resource.getrusage(resource.RUSAGE_SELF).ru_maxrss)"
+    "\n",
+    "print(\"parsing nodelist\")\n",
+    "\n",
+    "for member in node_list:\n",
+    "    print(member.mol_state.smiles)\n",
+    "    \n",
+    "print(\"nodelist enzymes\")\n",
+    "print(\"oops, to view the enzymes for this pathway you need a premium metamoles subscription\")\n",
+    "print(\"just kidding\")\n",
+    "\n",
+    "print(\"parsing enzymes\")\n",
+    "\n",
+    "for member in node_list:\n",
+    "    print(member.mol_state.enzyme)"
    ]
   },
   {
